--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
         body {
             color: white;
-            background-color: black;
+            background-color: white;
         }
 
         .canvas-container {
